@@ -8,6 +8,10 @@ version 1.13:
 	- gpomme: add video switch support.
 	- pommed: add support for LCD backlight control on the Intel 965GM
 	found in the MacBook3,1.
+	- pommed: rework the inotify code to handle several events at once
+	and to handle events with long filenames (longer than
+	sizeof(struct inotify_event)); pommed could enter a busy-loop when
+	receiving an inotify event with ie->len > sizeof(struct inotify_event).
 
 version 1.12:
 	- pommed: do not expect at least 3 evdevs at startup; there are
